--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext {
+        hamcrestVersion = '1.3'
+        mockitoVersion = '2.8.9'
+        kotlin_version = '1.1.3-2'
+        junitVersion = '4.12'
+    }
     repositories {
         google()
         jcenter()
